<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">هواخبر</string>
    <string name="hello_world">سلام!</string>
    <string name="action_settings">تنظیمات</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">جزئیات</string>
    <string name="title_activity_settings">تنظیمات</string>
    <string name="sharefooter_sign" translatable="false">
        #نرم افزار هوا خبر
    </string>

    <!-- Strings related to Notification preference -->

    <string name="pref_last_sync" translatable="false">last_sync</string>

    <!-- Strings for formatting weather-related data -->

    <string name="pref_location_label">نام شهر</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default">Tehran,ir</string>

    <string name="pref_units_label">واحد</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">Metric</string>
    <string name="pref_units_imperial" translatable="false">Imperial</string>

    <string name="action_map">موقعیت مکانی</string>

    <string name="action_share">به اشتراک</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->

    <string name="today">امروز</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->

    <string name="tomorrow">فردا</string>

    <string name="okey">تایید</string>
    <string name="cancel">انصراف</string>

    <!-- Date format [CHAR LIMIT=NONE] -->

    <string name="format_full_friendly_date" translatable="false">
        <xliff:g id="month">%1$s</xliff:g>,
        <xliff:g id="day">%2$s</xliff:g>
    </string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->

    <string name="format_temperature" translatable="false"><xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->

    <string name="format_wind_mph">
        وزش باد:
        <xliff:g id="speed">%1$1.0f</xliff:g>
        mph
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->

    <string name="format_wind_kmh">
        وزش باد:
        <xliff:g id="speed">%1$1.0f</xliff:g>
        km/h
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->

    <string name="format_pressure">فشار هوا:
        <xliff:g id="pressure">%1.0f</xliff:g>
        hPa
    </string>

    <!-- Humidity format CHAR LIMIT=25]-->

    <string name="format_humidity">رطوبت :
        <xliff:g id="humidity">%1.0f</xliff:g>
        %%
    </string>

    <!-- Share format [CHAR LIMIT=NONE]-->

    <string name="format_share" translatable="false">
        Weather for
        <xliff:g id="date">%1$s</xliff:g>
        in<xliff:g id="location">%2$s</xliff:g>:
        A high of
        <xliff:g id="high">%3$s</xliff:g>
        and low of
        <xliff:g id="low">%4$s</xliff:g>
    </string>

    <!-- SyncAdapter related -->

    <string name="sync_account_type" translatable="false">havakhabar.hosseini.com</string>
    <string name="content_authority" translatable="false">com.hosseini.abbas.havakhabar.app</string>

    <!-- Strings related to Notification Enabled preference -->

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">هشدار</string>

    <string name="pref_enable_notifications_true">فعال</string>
    <string name="pref_enable_notifications_false">غیر فعال</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Notification Format -->

    <string name="format_notification">
        امروز: بیشترین دما:
        <xliff:g id="high">%2$s</xliff:g>
        کمترین دما:
        <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->

    <string name="pref_last_notification" translatable="false">last_notification</string>
    <string name="sabrkonid">صبر کنید</string>
    <string name="keshvar">Keshvar</string>
    <string name="mail" translatable="false">AbbasHosseini@mail.com</string>
    <string name="sazande">سازنده :</string>
    <string name="share_HashTag">#نرم افزار هوا خبر</string>

    <string name="week_day_name_saturday">شنبه</string>
    <string name="week_day_name_sunday">یکشنبه</string>
    <string name="week_day_name_monday">دوشنبه</string>
    <string name="week_day_name_tuesday">سه شنبه</string>
    <string name="week_day_name_wednesday">چهار شنبه</string>
    <string name="week_day_name_Thursday">پنج شنبه</string>
    <string name="week_day_name_friday">جمعه</string>

    <string name="degrees_c">براساس سانتیگراد</string>
    <string name="degrees_f">براساس فارنهایت</string>

    <string name="statusbar_degrees_max">: ببیشترین دما </string>
    <string name="statusbar_degrees_min">کمترین دما </string>
    <string name="sky_state_clouds">
        آبری
    </string>
    <string name="sky_state_clear">
        آرام
    </string>
    <string name="sky_state_rain">
        بارانی
    </string>
    <string name="sky_state_snowy">برفی</string>
    <string name="sky_state_storm">
        رعدبرق
    </string>
    <string name="sky_state_foggy">
          مه
    </string>
    <string name="toast_message_weather_loadserver">
        لطفا نام شهر را وارد کرده و منتظر اطلاعات بمانید .
    </string>
    <string name="unknown">نامشخص</string>
    <string name="wind_direction_name">از سمت </string>
    <string name="Wind_North">شمال</string>
    <string name="Wind_northeast">شمال شرقی</string>
    <string name="Wind_Eastern">شرق</string>
    <string name="Wind_Southeast">جنوب شرقی</string>
    <string name="Wind_South">جنوب</string>
    <string name="Wind_Southwest"> جنوب غربی</string>
    <string name="Wind_Western">غرب</string>
    <string name="Wind_NorthWest">شمال غرب</string>
    <string name="Wind_west"></string>
</resources>
